# llm-finetune-inference-pipeline

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
configs/: base.yaml  inference.yaml  lora_7b.yaml  qlora_13b.yaml
notebooks/: 01_data_exploration.ipynb  02_training_analysis.ipynb  03_inference_profiling.ipynb
scripts/: benchmark_inference.py  evaluate.py  merge_adapter.py  quantise.py  train.py
src/: __init__.py
src/evaluation/: benchmarks.py  compare.py  harness.py
src/inference/: engine.py  quantise.py  sampler.py  streaming.py
src/training/: lora_config.py  scheduler.py  trainer.py
src/utils/: checkpoint.py  logging.py  memory.py  reproducibility.py
tests/: test_dataset.py  test_lora_config.py  test_memory.py  test_preprocessing.py  test_sampler.py
